# QuoridorEnvironment

./: .gitignore  LICENSE  MCTS.ipynb  README.md  main.py  play.py  pyproject.toml  simple.py  tournament.py
Agents/: __init__.py  agent.py  human_agent.py  mcts_agent.py  random_agent.py  shortest_path_agent.py  test_mcts_agent.py  test_random_agent.py
Environment/: __init__.py  env.py  no_gym.py  test_env.py  utils.py
Policies/: policy.py  test_policy.py
Storage/: __init__.py  trial_storage.py
Vizualiser/: vizualiser.py
