[tool.poetry]
name = "quoridorenvironment"
version = "0.1.0"
description = "PettingZoo Environment for Quoridor"
authors = ["Tientjie <tientjieit@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
pettingzoo = "^1.22.3"
pygame = "^2.3.0"
rlcard = "^1.1.0"
gymnasium = "^0.26.3"
requests = "^2.28.2"
pylint = "^2.17.4"
pytest = "^7.3.1"
coverage = "^7.2.5"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.2"
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
